Prevent navbar from collapsing on thin screens
Updated css rules to prevent "Menu" tab and subsequent unusable dropdown
from appearing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,7 +122,6 @@ footer {
     /* the rest of your styling */
 }
 #navbar {
-    margin-top: 30px;
     max-width: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -1000,11 +999,6 @@ video#bgvid {
 
 }
 
-#topbuttons {
-    position: relative;
-    top: -25px;
-}
-
 .verticalbar {
     color: #FBD78B;
 }
@@ -1160,4 +1154,20 @@ kbd {
     padding-top: 15px;
     /*padding-bottom: 9px;*/
     line-height: 20px;
+}
+
+.navbar-collapse.collapse {
+  display: block;
+}
+
+.navbar-nav>li, .navbar-nav {
+  float: left;
+}
+
+.navbar-nav.navbar-right:last-child {
+  margin-right: -15px;
+}
+
+.navbar-right {
+  float: right;
 }
